--- a/style.css
+++ b/style.css
@@ -9,15 +9,67 @@ body {
   border: 1px solid rgba(207, 203, 203, 0.699);
   border-radius: 10px;
   width: 500px;
+  height: 500px;
 }
 
 h2 {
   font-family: Arial, Helvetica, sans-serif;
   padding: 0;
   margin-bottom: 0;
+  margin-left: 20px;
 }
 
 #pa1 {
   padding: 0;
   margin-top: 0;
+  margin-left: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: gray;
+  font-size: small;
+  transform: skewX(-10deg);
+}
+
+
+#display{
+  width: 50%;
+  margin-left: 20px;
+  border: black solid 1px;
+}
+
+#agregar{
+  color: white;
+  background-color: rgb(52, 85, 218);
+  padding-left: 15px;
+  padding-right: 15px;
+  border-radius: 10px;
+}
+
+.container2{
+  border: 1px solid rgb(153, 152, 152);
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 450px;
+  height: 350px;
+  margin-left: 20px;
+}
+
+#eliminar{
+  margin-left: 20px;
+  margin-right: 60px;
+  border-radius: 10px;
+  color: white;
+  background-color: rgb(52, 85, 218);
+}
+
+#vaciar{
+  margin-right: 70px;
+  border-radius: 10px;
+  color: white;
+  background-color: brown;
+}
+
+#guardar{
+  border-radius: 10px;
+  color: white;
+  background-color: rgb(51, 231, 51);
 }
